--- a/jupyter_shortcuts.ipynb
+++ b/jupyter_shortcuts.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# install ImageMagic -- ImageMagick-6.9.0-4-Q16-x64-dll.exe (select chack \"add c libraries..\" !!!)\n",
+    "# install ImageMagic -- ImageMagick-6.9.0-4-Q16-x64-dll.exe (select \"add c libraries..\" !!!)\n",
     "#  --- add to path \"C:\\Program Files\\ImageMagick-6.9.0-Q16\"\n",
     "#  --- add env variable \"MAGICK_HOME\" value \"C:\\Program Files\\ImageMagick-6.9.0-Q16\"\n",
     "# install Ghostscript -- gs921w64.exe (downloaded from: https://www.ghostscript.com/download/gsdnld.html)"
